@@ -23,7 +23,7 @@
 
 #define JAVASCRIPT
 
-var ASAP_VERSION = "2.0.0";
+var ASAP_VERSION = "2.1.0";
 
 var ASAP_WAV_HEADER_BYTES = 44;
 
@@ -42,7 +42,7 @@ function ASAP()
 	this.covox = new Array(4);
 	this.base_pokey = { delta_buffer : new Array(888) };
 	this.extra_pokey = { delta_buffer : new Array(888) };
-	this.module_info = { durations : new Array(ASAP_SONGS_MAX), loops : new Array(ASAP_SONGS_MAX), song_pos : new Array(128) };
+	this.module_info = { durations : new Array(ASAP_SONGS_MAX), loops : new Array(ASAP_SONGS_MAX), song_pos : new Array(ASAP_SONGS_MAX) };
 	this.poly9_lookup = new Array(511);
 	this.poly17_lookup = new Array(16385);
 	this.memory = new Array(65536);
